--- a/css/main.css
+++ b/css/main.css
@@ -45,3 +45,11 @@ body {
 div > span {
   cursor: pointer;
 }
+
+.movie-poster {
+  padding-top: 25px;
+}
+
+#details-head h3 {
+  font-size: 20px;
+}
